--- a/src/Home/Styles/home__projects.css
+++ b/src/Home/Styles/home__projects.css
@@ -19,8 +19,7 @@
   margin-bottom: 1.5rem;
 }
 
-.home__projects-content_grid,
-.home__UI-content_grid {
+.home__projects-content_grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 1.9rem;
@@ -80,4 +79,46 @@
   line-height: 1.75rem;
   letter-spacing: 0.04em;
   margin-bottom: 1.5rem;
+}
+
+.home__UI-content_grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  row-gap: 3rem;
+  margin-bottom: 3rem;
+}
+
+.home__UI-content_grid-row {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  column-gap: 1.9rem;
+}
+
+.home__UI_card-wrap {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #fff;
+  border-radius: 0.25rem;
+  word-wrap: break-word;
+}
+
+.home__UI_card-wrap img {
+  width: 100%;
+  height: 100%;
+  white-space: nowrap;
+}
+
+.home__UI_card-body {
+  padding: 1.25rem;
+  height: 100%;
+}
+
+.home__UI_card-body h5 {
+  font-size: 1.25rem;
+  margin-bottom: 0.75rem;
+}
+
+.home__UI_card-body p {
+  line-height: 1.5rem;
 }
