--- a/src/Phoenix_Media/Styles/pm__nav.css
+++ b/src/Phoenix_Media/Styles/pm__nav.css
@@ -11,7 +11,7 @@
 .pm__container {
   position: relative;
   background-color: var(--secondary-color);
-  margin: 2.7rem;
+  margin: 2.2rem 2.7rem;
   box-shadow: 0 1rem 3rem var(--grey-color);
   min-height: calc(100vh - 5.4rem);
 }
@@ -20,8 +20,8 @@
 
 .pm__header-wrap_logo {
   position: absolute;
-  top: 5rem;
-  left: 5rem;
+  top: 2rem;
+  left: 2rem;
   z-index: 5;
 }
 
@@ -30,14 +30,14 @@
 }
 
 .pm__header-wrap_logo h1 span {
-  font-size: 2rem;
+  font-size: 1.25rem;
   font-weight: 900;
   color: var(--primary-color);
   transform: uppercase;
   background-color: var(--white-color);
-  height: 3.5rem;
-  width: 3.5rem;
-  margin: 0.5rem;
+  height: 2.5rem;
+  width: 2.5rem;
+  margin: 0 0.5rem;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -99,14 +99,13 @@
 }
 
 .pm__header-wrap_logo h2 span {
-  font-size: 2rem;
+  font-size: 1.25rem;
   font-weight: 900;
   color: var(--primary-color);
-  transform: uppercase;
   background-color: var(--white-color);
-  height: 3.5rem;
-  width: 3.5rem;
-  margin: 0.5rem;
+  height: 2.5rem;
+  width: 2.5rem;
+  margin: 0 0.5rem;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -166,12 +165,12 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 6.5rem;
-  right: 6.5rem;
+  top: 3rem;
+  right: 2.5rem;
   z-index: 200;
   cursor: pointer;
-  width: 5.5rem;
-  height: 5.5rem;
+  width: 3.75rem;
+  height: 3.75rem;
   background-color: var(--white-color);
   border-radius: 50%;
   cursor: pointer;
@@ -180,9 +179,9 @@
 
 .pm__header-wrap_hamburger-line {
   height: 0.2rem;
-  width: 3.5rem;
+  width: 2rem;
   background-color: var(--light-grey-color);
-  margin: 0.4rem 0;
+  margin: 0.25rem 0;
 }
 
 .pm__header-wrap_nav-wrap {
@@ -289,4 +288,128 @@
 
 .change .pm__nav-link:nth-child(6) {
   transition: top 1s 1.4s, opacity 0.3s, color 0.3s;
+}
+
+/* FOOTER STYLES */
+
+.pm__footer-wrap {
+  background: lightslategray;
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  grid-column-gap: 1rem;
+  padding: 0 1rem 1rem;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  text-transform: capitalize;
+  align-items: center;
+  text-align: center;
+}
+
+.pm__footer-wrap a {
+  color: white;
+  text-transform: capitalize;
+  font-size: 1.1rem;
+}
+
+.pm__footer-heading {
+  grid-row: 1/2;
+  align-self: center;
+  font-size: 1.325rem;
+}
+
+.pm__footer-heading h2 {
+  margin: 0.5rem 0 1rem;
+}
+
+.pm__footer-links,
+.pm__footer-media {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-auto-rows: 70px;
+  grid-row-gap: 1rem;
+  text-transform: none;
+  font-size: 1.4rem;
+  align-self: start;
+  height: 100%;
+}
+
+#pm__footer-links_double {
+  grid-column: 1/3;
+}
+
+.pm__footer-links a:hover:nth-child(1),
+.pm__footer-media a:hover:nth-child(1),
+.pm__footer-links a:hover:nth-child(3),
+.pm__footer-media a:hover:nth-child(3) {
+  transform: rotate(-10deg);
+  box-shadow: 0 2rem 3rem #000;
+}
+
+.pm__footer-links a:hover:nth-child(2),
+.pm__footer-media a:hover:nth-child(2),
+.pm__footer-links a:hover:nth-child(4),
+.pm__footer-media a:hover:nth-child(4) {
+  transform: rotate(10deg);
+  box-shadow: 0 2rem 3rem #000;
+}
+
+.pm__footer-form_btn {
+  grid-column: 1/3;
+  grid-row: 2/3;
+  letter-spacing: 0.1rem;
+  cursor: pointer;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem 0.5rem var(--grey-color);
+  padding: 1rem;
+  height: 70%;
+  align-self: center;
+  text-align: center;
+  line-height: 0.1rem;
+  justify-self: center;
+}
+
+.pm__footer-form_btn:active {
+  text-shadow: 0.1rem 0.1rem var(--primary-color);
+}
+
+.pm__footer-form_name,
+.pm__footer-form_email {
+  letter-spacing: 0.1rem;
+  border-radius: 1rem;
+  text-align: center;
+  box-shadow: 0 0 1rem 0.5rem var(--grey-color);
+  font-size: 1.2rem;
+  padding: 0.5rem 1rem;
+}
+
+.pm__footer-form_name {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  margin-right: 2rem;
+}
+
+.pm__footer-form_email {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  margin-left: 2rem;
+}
+
+.pm__footer-wrap form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 0.5fr;
+  align-self: start;
+}
+
+.pm__footer-copyRight {
+  grid-column: 1/3;
+  grid-row: 3/4;
+  padding: 1rem 0;
+  font-size: 1rem;
+  letter-spacing: 0.2rem;
 }
