--- a/src/Home/Styles/home__contact.css
+++ b/src/Home/Styles/home__contact.css
@@ -70,7 +70,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   text-align: center;
 }
 
