--- a/src/Sandbox/Phoenix_Media/Styles/pm__discord.css
+++ b/src/Sandbox/Phoenix_Media/Styles/pm__discord.css
@@ -116,3 +116,105 @@
   align-self: center;
   justify-self: center;
 }
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1370px) {
+  .pm__discord-wrap {
+    padding-top: 8rem;
+  }
+}
+
+@media screen and (max-width: 1240px) {
+  .pm__discord-wrap_header {
+    padding: 2rem 1rem;
+  }
+
+  .pm__discord-wrap_header h1 {
+    font-size: 6rem;
+  }
+
+  .pm__discord-wrap_content-wrap .head {
+    font-size: 4rem;
+  }
+
+  .pm__discord-wrap_content-wrap .rule,
+  .pm__discord-wrap_content-wrap .rank {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .pm__discord-wrap_content-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pm__discord-wrap_header h2 {
+    font-size: 2.5rem;
+  }
+
+  .pm__discord-wrap_content-wrap .head {
+    margin: 1rem 0;
+  }
+
+  .pm__discord-wrap_content-wrap h4 {
+    margin-top: 2rem;
+  }
+
+  .pm__discord-wrap_content-wrap iframe {
+    min-height: 500px;
+  }
+
+  .pm__discord-wrap_content-wrap .one,
+  .pm__discord-wrap_content-wrap .two,
+  .pm__discord-wrap_content-wrap .three,
+  .pm__discord-wrap_content-wrap .three,
+  .pm__discord-wrap_content-wrap .four,
+  .pm__discord-wrap_content-wrap .five,
+  .pm__discord-wrap_content-wrap .six {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .pm__discord-wrap_header h1 {
+    font-size: 4rem;
+    -webkit-text-stroke-width: 0.15rem;
+  }
+
+  .pm__discord-wrap_header h2 {
+    font-size: 2rem;
+  }
+
+  .pm__discord-wrap_header strong {
+    font-size: 2rem;
+  }
+
+  .pm__discord-wrap_content-wrap .head {
+    font-size: 3.5rem;
+  }
+
+  .pm__discord-wrap_content-wrap .rule,
+  .pm__discord-wrap_content-wrap .rank {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .pm__discord-wrap_header h1 {
+    font-size: 3.5rem;
+  }
+
+  .pm__discord-wrap_header h2 {
+    font-size: 1.5rem;
+  }
+
+  .pm__discord-wrap_header strong {
+    font-size: 1.5rem;
+  }
+
+  .pm__discord-wrap_content-wrap .head {
+    font-size: 2rem;
+  }
+}
