--- a/src/Sandbox/Phoenix_Media/Styles/pm__nav.css
+++ b/src/Sandbox/Phoenix_Media/Styles/pm__nav.css
@@ -208,14 +208,14 @@
 .pm__header-wrap_nav-close {
   position: absolute;
   top: 3rem;
-  right: 2.6rem;
+  right: 2.5rem;
   z-index: 300;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 5.5rem;
-  height: 5.5rem;
+  width: 3.75rem;
+  height: 3.75rem;
   background-color: var(--white-color);
   border-radius: 50%;
   cursor: pointer;
@@ -226,7 +226,7 @@
   position: absolute;
   transform: rotate(40deg);
   height: 0.2rem;
-  width: 3.5rem;
+  width: 2.75rem;
   background-color: var(--light-grey-color);
 }
 
@@ -234,27 +234,34 @@
   position: absolute;
   transform: rotate(-40deg);
   height: 0.2rem;
-  width: 3.5rem;
+  width: 2.75rem;
   background-color: var(--light-grey-color);
 }
 
 .pm__header-wrap_nav-list {
+  height: 100%;
+  display: flex;
+}
+
+.pm__header-wrap_nav-list a {
   font-size: 3rem;
   font-weight: 700;
   letter-spacing: 0.4rem;
   color: var(--white-color);
   text-transform: uppercase;
   width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 100vh;
   opacity: 0.8;
   position: relative;
   top: -100%;
   transition: all 0.3s;
 }
 
-.pm__header-wrap_nav-list a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.change .pm__header-wrap_nav-wrap {
+  bottom: 0;
+  opacity: 1;
 }
 
 .change .pm__nav-link {
@@ -268,26 +275,32 @@
 
 .change .pm__nav-link:nth-child(1) {
   transition: top 1s 0.4s, opacity 0.3s, color 0.3s;
+  background-color: #03c04a;
 }
 
 .change .pm__nav-link:nth-child(2) {
   transition: top 1s 0.6s, opacity 0.3s, color 0.3s;
+  background-color: #f08080;
 }
 
-.change .nav-link:nth-child(3) {
+.change .pm__nav-link:nth-child(3) {
   transition: top 1s 0.8s, opacity 0.3s, color 0.3s;
+  background-color: #7289da;
 }
 
 .change .pm__nav-link:nth-child(4) {
   transition: top 1s 1s, opacity 0.3s, color 0.3s;
+  background-color: #f96854;
 }
 
-.change .nav-link:nth-child(5) {
+.change .pm__nav-link:nth-child(5) {
   transition: top 1s 1.2s, opacity 0.3s, color 0.3s;
+  background-color: #afeeee;
 }
 
 .change .pm__nav-link:nth-child(6) {
   transition: top 1s 1.4s, opacity 0.3s, color 0.3s;
+  background-color: #800080;
 }
 
 /* FOOTER STYLES */
@@ -300,8 +313,6 @@
   grid-template-rows: 1fr 2fr;
   grid-column-gap: 1rem;
   padding: 0 1rem 1rem;
-  bottom: 0;
-  left: 0;
   width: 100%;
   height: auto;
   text-transform: capitalize;
@@ -412,4 +423,90 @@
   padding: 1rem 0;
   font-size: 1rem;
   letter-spacing: 0.2rem;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1424px) {
+  .pm__footer-form_name,
+  .pm__footer-form_email {
+    font-size: 1.2rem;
+    padding: 0.5rem 1rem;
+  }
+  .pm__footer-form_name {
+    margin-right: 1rem;
+  }
+
+  .pm__footer-form_email {
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .pm__footer-form_name,
+  .pm__footer-form_email {
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+  }
+  .pm__footer-form_name {
+    margin-right: 1rem;
+  }
+
+  .pm__footer-form_email {
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 965px) {
+  .pm__footer-wrap {
+    display: flex;
+    flex-direction: column;
+    padding: 0 1rem 1rem;
+    width: 100%;
+    height: auto;
+  }
+
+  .pm__footer-links {
+    margin: 0 auto;
+    margin-bottom: 2rem;
+  }
+
+  .pm__footer-media {
+    margin: 0 auto;
+  }
+
+  .pm__footer-links,
+  .pm__footer-media {
+    grid-column-gap: 2rem;
+  }
+
+  .pm__footer-wrap form {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .pm__header-wrap_logo {
+    top: 2rem;
+    left: 0rem;
+    max-width: calc(100vw - 6.4rem);
+  }
+
+  .pm__footer-wrap form {
+    display: flex;
+    flex-direction: column;
+    align-self: start;
+  }
+
+  .pm__footer-form_name {
+    margin-right: 0rem;
+    padding: 0.5rem 0;
+    font-size: 0.8rem;
+  }
+
+  .pm__footer-form_email {
+    margin: 0.75rem 0 1rem;
+    padding: 0.5rem 0;
+    font-size: 0.8rem;
+  }
 }
