--- a/src/Sandbox/Phoenix_Media/Styles/pm__youtube.css
+++ b/src/Sandbox/Phoenix_Media/Styles/pm__youtube.css
@@ -1,9 +1,4 @@
-.yt-banner {
-  position: relative;
-}
-
 .yt-banner img {
-  position: relative;
   width: 100%;
   height: auto;
   top: 0;
@@ -11,88 +6,171 @@
   object-fit: cover;
 }
 
-.main-yt {
-  position: relative;
-  margin-bottom: 5rem;
-}
-
 /* Carousel Styles */
-.carousel {
+
+.pm__yt-slider {
   position: relative;
-  height: 80rem;
-  width: 80%;
-  margin: 0 auto;
-}
-.carousel__image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.carousel__track-container {
-  background: transparent;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-}
-
-.carousel__track {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  position: relative;
-  height: 100%;
-  transition: transform 250ms ease-in;
-  text-align: center;
-  color: blue;
-  text-shadow: 0.2rem 0.3rem 0.2rem #000000;
-  font-size: 10rem;
-}
-
-.carousel__slide {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-}
-
-.carousel__button {
-  position: absolute;
-  top: 56%;
-  transform: translateY(-50%);
-  background: transparent;
-  border: 0;
-  cursor: pointer;
-}
-
-.carousel__button--left {
-  left: -100px;
-}
-
-.carousel__button--right {
-  right: -100px;
-}
-
-.carousel__nav {
+  height: 100vh;
   display: flex;
   justify-content: center;
-  padding: 10px 0;
+  align-items: flex-start;
+  margin: auto;
+  flex-wrap: wrap;
+  padding-top: 3rem;
 }
 
-.carousel__indicator {
-  border: 0;
-  border-radius: 50%;
-  width: 15px;
-  height: 15px;
-  background: rgba(0, 0, 0, 0.3);
-  margin: 0 12px;
+.pm__yt-slider .image {
+  width: 1000px;
+  height: 600px;
+  border-radius: 10px;
+}
+
+.pm__yt-slider .right-arrow {
+  position: absolute;
+  top: 60%;
+  right: 32px;
+  font-size: 3rem;
+  color: #000;  
+  z-index: 10;
   cursor: pointer;
+  user-select: none;
 }
 
-.carousel__indicator.current-slide {
-  background: rgba(0, 0, 0, 0.75);
+.pm__yt-slider .left-arrow {
+  position: absolute;
+  top: 60%;
+  left: 32px;
+  font-size: 3rem;
+  color: #000;  
+    z-index: 10;
+  cursor: pointer;
+  user-select: none;
 }
 
-.is-hidden {
-  display: none;
+.pm__yt-slider .slide {
+  opacity: 0;
+  transition-duration: 1s ease;
+}
+
+.pm__yt-slider .slide.active {
+  opacity: 1;
+  transition-duration: 1s;
+  transform: scale(1.08);
+}
+
+.pm__yt-slider .slide iframe  {
+  width: 100%;
+      position: absolute;
+
+}
+
+.pm__yt-slider .slide-title {
+  text-align: center;
+    color: blue;
+    text-shadow: .2rem .3rem .2rem #000000;
+    font-size: 10rem; 
+    padding-bottom: 3rem;
+    line-height: 10rem;
+    z-index: 90;
+    width: 100%;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1515px){
+  .pm__yt-slider .slide iframe {
+    width: 90%;
+    left: 5%;
+    top: 85%;
+  }
+
+  .pm__yt-slider .slide-title {
+    font-size: 8rem;
+  }
+}
+
+@media screen and (max-width: 1160px){
+  .pm__yt-slider .slide-title {
+    font-size: 6rem;
+  }
+}
+
+@media screen and (max-width: 935px){
+  .yt-banner img {
+    height: 20vh;
+  }
+
+  .pm__yt-slider .slide iframe {
+    width: 80%;
+    left: 10%;
+    top: 85%;
+  }
+
+  .pm__yt-slider .slide-title {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+
+  .pm__yt-slider {
+    margin-bottom: -4rem;
+  }
+}
+
+@media screen and (max-width: 860px) {
+    .pm__yt-slider .left-arrow {
+    left: 0px;
+  }
+
+   .pm__yt-slider .right-arrow {
+    right: 0px;
+  }
+
+  
+  .pm__yt-slider .slide-title {
+    margin-top: 2rem;
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .pm__yt-slider .slide-title {
+    margin-top: 2rem;
+    font-size: 3.25rem;
+    line-height: 3.25rem;
+  }
+
+    .pm__yt-slider .left-arrow {
+    left: 10px;
+    top: 50%;
+  }
+
+   .pm__yt-slider .right-arrow {
+    right: 10px;
+    top: 50%;
+  }
+}
+
+@media screen and (max-width: 550px){
+  .pm__yt-slider  {
+    margin-bottom: -35rem;
+      padding-top: 0rem;
+  }
+
+  .pm__yt-slider .slide iframe {
+    width: 80%;
+    height: 200%;
+    left: 10%;
+    top: 100%;
+  }
+
+      .pm__yt-slider .left-arrow {
+    left: 2.5px;
+    top: 22%;
+  }
+
+   .pm__yt-slider .right-arrow {
+    right: 2.5px;
+    top: 22%;
+  }
 }
