--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Kadwa:wght@400;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
-  font-family: "Lato", sans-serif;
+  font-family: 'Roboto Slab', serif;
   list-style-type: none;
   text-decoration: none;
   box-sizing: border-box;
