--- a/src/Home/Styles/home__index.css
+++ b/src/Home/Styles/home__index.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
+  margin-bottom: 15rem;
 }
 
 .home__index-wrap_bio-wrap {
@@ -40,4 +41,9 @@
 
 .home__index-wrap_bio-content_text p {
   margin-bottom: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.home__index-wrap_bio-content_text p a {
+  text-decoration: underline;
 }
