--- a/src/Sandbox/Examples/Styles/header__hamburger.css
+++ b/src/Sandbox/Examples/Styles/header__hamburger.css
@@ -42,7 +42,7 @@
 
 .generic__nav-text {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding: 8px 0px 8px 16px;
     list-style: none;
@@ -73,7 +73,7 @@
     background-color: #060b26;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     color: white;
     font-size: 2rem;
