--- a/src/Home/Styles/home__projects.css
+++ b/src/Home/Styles/home__projects.css
@@ -49,15 +49,17 @@
 .home__projects_card-body h5 {
   font-size: 1.25rem;
   margin-bottom: 0.75rem;
+  letter-spacing: .025rem;
 }
 
 .home__projects_card-body p {
   line-height: 1.5rem;
+  letter-spacing: .05rem;
 }
 
 .home__projects_card-footer {
   padding: 0.75rem 0;
-  padding-left: 1.5rem;
+  padding-left: 1.25rem;
   border-top: 1px solid rgba(0, 0, 0, 0.125);
   display: flex;
 }
@@ -68,11 +70,12 @@
   font-weight: 700;
   border-radius: 0.25rem;
   background-color: #4dac6a;
-  color: white;
+  color: white;  
+  letter-spacing: .025rem;
 }
 
 .home__projects_card-footer p:nth-child(2) {
-  margin: 0 0.5rem;
+  margin: 0 0.75rem;
 }
 
 #uiBlurb {
