--- a/src/Home/Styles/home__projects.css
+++ b/src/Home/Styles/home__projects.css
@@ -35,6 +35,22 @@
   word-wrap: break-word;
 }
 
+/* TWO LEFTOVER ELEMENTS */
+.home__projects_card-wrap:last-child:nth-child(3n-1) {
+  grid-column-end: 4;
+
+}
+
+.home__projects_card-wrap:last-child:nth-child(3n+1) {
+  grid-column-end: 4;
+
+}
+
+/* ONE LEFTOVER ELEMENT */
+.home__projects_card-wrap:last-child:nth-child(3n-2) {
+  grid-column-end: 3;
+}
+
 .home__projects_card-wrap img {
   width: 100%;
   height: 100%;
