--- a/src/Home/Styles/home__nav.css
+++ b/src/Home/Styles/home__nav.css
@@ -67,7 +67,7 @@ body.Dark .home__header-wrap a {
 }
 
 body.Dark .home__index-wrap_bio-wrap {
-  background-image: url("../Assets/Images/DarkMode.gif");
+  background-image: url("../Assets/Images/Squashed.gif");
 }
 
 body.Dark .home__about-wrap_content-buttons a:hover,
